force-app/main/default/objects/Province_Tax_Rate_Mapping__mdt/Province_Tax_Rate_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Province Tax Rate Mapping</description>
    <label>Province Tax Rate Mapping</label>
    <pluralLabel>Province Tax Rate Mappings</pluralLabel>
</CustomObject>