force-app/main/default/objects/Province_Tax_Rate_Mapping__mdt/fields/Canada_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Canada_Tax_Rate__c</fullName>
    <description>Canada Tax Rate</description>
    <inlineHelpText>Canada Tax Rate</inlineHelpText>
    <label>Canada Tax Rate</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>