force-app/main/default/objects/Province_Tax_Rate_Mapping__mdt/fields/Province_Acronym__c.field-meta.xml
<CustomField>
    <fullName>Province_Acronym__c</fullName>
    <description>Province Acronym</description>
    <inlineHelpText>Province Acronym</inlineHelpText>
    <label>Province Acronym</label>
    <length>10</length>
    <type>Text</type>
</CustomField>