force-app/main/default/objects/Province_Tax_Rate_Mapping__mdt/fields/Province_Name__c.field-meta.xml
<CustomField>
    <fullName>Province_Name__c</fullName>
    <description>Province Name</description>
    <inlineHelpText>Province Name</inlineHelpText>
    <label>Province Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>