force-app/main/default/objects/Province_Tax_Rate_Mapping__mdt/fields/Province_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Province_Tax_Rate__c</fullName>
    <description>Province Tax Rate</description>
    <inlineHelpText>Province Tax Rate</inlineHelpText>
    <label>Province Tax Rate</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>