force-app/main/default/objects/Province_Tax_Rate_Mapping__mdt/fields/Tax_Type__c.field-meta.xml
<CustomField>
    <fullName>Tax_Type__c</fullName>
    <description>Tax Type</description>
    <label>Tax Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>