force-app/main/default/objects/Province_Tax_Rate_Mapping__mdt/fields/Total_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Total_Tax_Rate__c</fullName>
    <description>Total Tax Rate</description>
    <inlineHelpText>Total Tax Rate</inlineHelpText>
    <label>Total Tax Rate</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>