force-app/main/default/objects/Province_Tax_Rate_Mapping__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Province_Name__c</columns>
    <columns>Province_Acronym__c</columns>
    <columns>Canada_Tax_Rate__c</columns>
    <columns>Province_Tax_Rate__c</columns>
    <columns>Total_Tax_Rate__c</columns>
    <columns>Tax_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
</ListView>